5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1670_1396.log
== TEST (2019-04-16 19:03:15) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:19) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:03:29) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- EXECUTION TIME:
0.284925
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
13.469999999999999
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.909
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:02) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:06) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:11) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:04:25) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- EXECUTION TIME:
0.195874
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
13.469999999999999
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.909
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:04:29) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x=0.1 * vc
y=0.06 * vc
if 300<=0:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:05:42) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if <=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:05:59) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if <=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if <=300:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:14) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (<=300):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (<=300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:29) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:30) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:30) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:30) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:30) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:31) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:31) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:31) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:31) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:31) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:34) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:34) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:34) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=):
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:49) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<=:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<=:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:50) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<=:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<=:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:50) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<=:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<=:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:51) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<=:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<=:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:51) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<=:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<=:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:56) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<= :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<= :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:06:57) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if 300<= :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if 300<= :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:07) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=) :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=) :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:08) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=) :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=) :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:09) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=) :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=) :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:09) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=) :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=) :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:09) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if (300<=) :
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 4
    if (300<=) :
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:07:43) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if x>=300:
   print(x)
else:
	print(y)
-- OUTPUT:
13.469999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:14) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 // vc
y= 0.06 // vc
if x>=300:
   print(x)
else:
	print(y)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:08:48) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if x<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
2.245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:19) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
2.245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:24) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.01 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
2.245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:34) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:57) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:10:02) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- EXECUTION TIME:
0.15629
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95000000000002
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.909
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:06) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:06) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:10:12) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- EXECUTION TIME:
0.175954
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95000000000002
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.909
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:17) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:17) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:32) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(vc)
else:
	print(y)
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:11:07) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.006 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
246.95000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:11:12) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.006 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- EXECUTION TIME:
0.174357
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95000000000002
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
2.1909
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:11:46) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10 * vc
y= 6 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
2245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:11:49) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10 * vc
y= 6 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
2245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:33) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= (10%) * vc
y= (6%) * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= (10%) * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:34) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= (10%) * vc
y= (6%) * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= (10%) * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:44) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:45) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:45) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:45) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:45) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10% * vc
y= 6% * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10% * vc
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:53) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10 % * vc
y= 6 % * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10 % * vc
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:54) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 10 % * vc
y= 6 % * vc
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
File "XXXX", line 2
    x= 10 % * vc
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:15) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:16) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:20) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:21) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:22) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:22) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:23) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:24) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:13:28) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:14:40) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc + x
y= 0.06 * vc + y
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= 0.1 * vc + x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:14:46) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc + x
y= 0.06 * vc + y
if vc<=300:
   print(x)
else:
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= 0.1 * vc + x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:17:59) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(x)
else:
	print(y)
-- OUTPUT:
22.450000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:35) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:42) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.06 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- EXECUTION TIME:
0.131165
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
21.91
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:00) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.6 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:06) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.6 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:11) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.6 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:13) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 1.1 * vc
y= 0.6 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- EXECUTION TIME:
0.19073
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
219.09
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
300.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:37) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc
y= 0.06 * vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:30) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc + vc
y= 0.06 * vc + vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:20:35) 
-- CODE:
vc=float(input("digite o valor consumido:"))
x= 0.1 * vc + vc
y= 0.06 * vc + vc
if vc<=300:
   print(round(x, 2))
else:
	print(round(y, 2))
-- EXECUTION TIME:
0.153018
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
